# agent-eval-kit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  agent-eval-kit-SPEC-v1.md  agent-eval-kit-SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_eval/: __init__.py  __main__.py  adapters.py  cli.py  dashboard.py  datasets.py  judges.py  metrics.py  runner.py  scorecard.py  store.py  sut.py  text.py
examples/: better_rag.py  compare.py  golden.jsonl  tiny_rag.py
tests/: test_eval.py  test_future.py  test_integration.py  test_trilha_b.py
