[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-eval-kit"
version = "0.1.0"
description = "Evaluation toolkit for LLM agents: golden datasets, LLM-as-judge, and automated quality scorecards."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "evaluation", "eval", "agent", "rag", "llm-as-judge", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

# Core has zero runtime dependencies: the mock-judge path must run anywhere.
dependencies = []

[project.optional-dependencies]
# Real LLM judges are opt-in so no provider SDK is ever a required dependency.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[project.urls]
Homepage = "https://github.com/raphaela97/agent-eval-kit"

[tool.hatch.build.targets.wheel]
packages = ["agent_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run stays offline and fast: integration tests are opt-in via `-m`.
addopts = "-ra -m 'not integration'"
markers = [
    "integration: makes real network calls; needs ANTHROPIC_API_KEY (opt-in via `pytest -m integration`)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["out"]

[tool.ruff.lint]
# A pragmatic, high-signal rule set: pyflakes/pycodestyle, imports, pyupgrade,
# bugbear, simplify, and ruff's own checks.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["agent_eval"]
# Provider SDKs are optional extras; don't fail typing when they're absent.
[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "openai",
    "openai.*",
    "google",
    "google.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["agent_eval"]
branch = true
# __main__.py is a 3-line `python -m agent_eval` shim exercised via the CLI.
omit = ["agent_eval/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
